--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^7.1.1",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
+    "svg-inline-loader": "^0.8.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
